clusters/on-prem-cluster/core/minio/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: minio
  labels:
    name: minio
