clusters/on-prem-cluster/core/minio/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  serviceName: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args: ['server', '/data', '--console-address', ':9001']
        ports:
        - name: minio
          containerPort: 9000
        volumeMounts:
          - name: minio-data
            mountPath: /data
      volumes:
        - name: minio-data
          hostPath:
            path: /mnt/media/minio/data
